--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@ body {
     background-image:   url('./Blue-Sky.jpg');
     background-color:     blue;
 }
+
+.location-name {
+    color:                            white;
+}
