--- a/style.css
+++ b/style.css
@@ -1,8 +1,68 @@
 body {
-    background-image:   url('./Blue-Sky.jpg');
-    background-color:     blue;
+    background-color: blue;
+    min-Height: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: url(./Blue-Sky.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    border: none;
+  }
+
+#app-title {
+  font-family: 'Aclonica'
 }
 
-.location-name {
-    color:                            white;
+#location-name {
+  font-family: 'Aclonica';
+}
+
+#location-data {
+    color: navy;
+}
+
+#city-data {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  height: 200px;
+}
+
+.present-weather {
+  box-sizing: border-box;
+  width: 25%;
+  padding: 20px;
+}
+
+#weather-depiction {
+  width: 100px;
+  height: 100px;
+  border: 0.5px white solid;
+}
+
+#present-UV-index {
+  color: white;
+  font-style: bold;
+  padding-left: 8px;
+  height: 30px;
+}
+
+#predicted-conditions {
+  box-sizing: border-box;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.future {
+  box-sizing: border-box;
+  width: 18.08%;
+  margin-left: 17px;
+  height: 400px;
+  padding: 10px;
+}
+
+.small-date {
+  font-size: 14px;
 }
